<resources>
    <string name="app_name">Teacher_group2</string>
    <string name="title_activity_main">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgetpass">Forget password?</string>
    <string name="login">Login</string>
    <string name="newAccount">Create new account</string>
    <string name="save">Save</string>
    <string name="Group_name">Group Name</string>
    <string name="Group_desc">Group Description</string>
    <string name="create_group">Create Group</string>
    <string name="edit_group">Edit Group</string>
    <string name="group_dialog">Create Group</string>
    <string name="username">Username</string>
    <string name="delete">Delete</string>
    <string name="t_name">Name: </string>
    <string name="edit">Edit</string>
    <string name="Quiz_name">Quiz Name</string>
    <string name="Quiz_desc">Quiz Description</string>
    <string name="add_questions">Add Question</string>
    <string name="Ques_type">Question Type</string>

    <string name="ques_stmt">Question Statement</string>
    <string name="Quiz_deadline">Quiz Deadline</string>
    <string name="correct_ans_label">Correct Answer</string>
    <string-array name="quesTypes">
        <item>Select question type</item>
        <item>True or False</item>
        <item>Multiple Choice</item>
    </string-array>

</resources>
