<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/dialog_background">


    <EditText
        android:id="@+id/et_groupName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="left"
        android:hint="@string/Group_name" />

    <EditText
        android:id="@+id/et_groupDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="left"
        android:hint="@string/Group_desc"
        android:layout_below="@id/et_groupName"/>

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_margin="16dp"
        android:text="@string/save"
        android:textAllCaps="false"
        android:layout_below="@id/et_groupDesc"
        android:layout_alignParentRight="true"/>
</RelativeLayout>