<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_background">


    <EditText
        android:id="@+id/et_quizName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center_horizontal"
        android:hint="@string/Quiz_name"
        />

    <EditText
        android:id="@+id/et_quizDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center_horizontal"
        android:hint="@string/Quiz_desc"
        android:layout_below="@+id/et_quizName"
        />


    <Button
        android:id="@+id/add_questions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="16dp"
        android:text="@string/add_questions"
        android:textAllCaps="false"
        android:layout_below="@+id/et_quizDesc"
        android:layout_centerHorizontal="true"

        />
</RelativeLayout>