<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_group"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ps.wwbtraining.teacher_group2.Activities.GroupActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/create_group"
            android:textColor="@android:color/white"
            android:textSize="18sp"
             />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_save" />


    </LinearLayout>

    <EditText
        android:id="@+id/et_groupName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        android:hint="@string/Group_name" />

    <EditText
        android:id="@+id/et_groupDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        android:hint="@string/Group_desc" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_Stdgroups"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp" />


</LinearLayout>
